--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "rest-express",
+  "name": "planmytrip",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
+  "description": "AI-powered travel itinerary generator",
+  "author": "Saish Kothawade",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/saishk237/Plan-My-Trip.git"
+  },
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
@@ -84,9 +90,6 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.4.1",
-    "@replit/vite-plugin-dev-banner": "^0.1.1",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/bcryptjs": "^2.4.6",
